# taiga_os

./: .gitignore  .gitmodules  README.md
batch/: build.bat  format.bat  run.bat
bootloader/: Cargo.toml  README.md
bootloader/.cargo/: config.toml
bootloader/lib/config_parser/: Cargo.toml
bootloader/lib/config_parser/src/: lib.rs  parser.rs
bootloader/lib/efi_elf_loader/: Cargo.toml
bootloader/lib/efi_elf_loader/src/: lib.rs
bootloader/lib/efi_file_loader/: Cargo.toml
bootloader/lib/efi_file_loader/src/: config.rs  elf.rs  lib.rs  psf.rs
bootloader/lib/efi_functions/: Cargo.toml
bootloader/lib/efi_functions/src/: alloc.rs  console.rs  file.rs  graphics.rs  lib.rs
bootloader/lib/elf_loader/: Cargo.toml
bootloader/lib/elf_loader/src/: header.rs  lib.rs
bootloader/lib/file/src/: lib.rs
bootloader/lib/psf_loader/: Cargo.toml
bootloader/lib/psf_loader/src/: header.rs  lib.rs
bootloader/lib/uefi/: Cargo.toml
bootloader/lib/uefi/src/: alloc.rs  console.rs  data_types.rs  file.rs  graphics.rs  lib.rs  loaded_image.rs  system.rs
bootloader/lib/uefi/src/console_support/: graphics_output.rs  simple_text_input.rs  simple_text_output.rs
bootloader/lib/uefi/src/media_access/: file.rs  simple_file_system.rs
bootloader/lib/uefi/src/protocols/: data_types.rs  loaded_image.rs  loaded_images.rs  mod.rs  system.rs
bootloader/lib/uefi/src/protocols/console_support/: graphics_output.rs  simple_text_input.rs  simple_text_output.rs
bootloader/lib/uefi/src/protocols/media_access/: file.rs  simple_file_system.rs
bootloader/lib/uefi/src/protocols/system_services/: boot_time.rs  run_time.rs
bootloader/lib/uefi/src/system_services/: boot_time.rs  run_time.rs
bootloader/lib/uefi_tools/: Cargo.toml
bootloader/lib/uefi_tools/src/: alloc.rs  console.rs  file.rs  graphics.rs  lib.rs
bootloader/src/: elf.rs  lib.rs  main.rs  psf.rs
kernel/: Cargo.toml  README.md  kernel.ld  rust-toolchain.toml  x64_linker.ld
kernel/.cargo/: config.toml
kernel/drivers/efi_graphics_output/: Cargo.toml
kernel/drivers/efi_graphics_output/src/: lib.rs
kernel/drivers/graphics/: Cargo.toml
kernel/drivers/graphics/src/: lib.rs
kernel/drivers/memory/: Cargo.toml
kernel/drivers/memory/src/: lib.rs  virtual_memory.rs
kernel/lib/fonts/: Cargo.toml
kernel/lib/fonts/psf/: Cargo.toml
kernel/lib/fonts/psf/src/: lib.rs
kernel/lib/fonts/src/: lib.rs
kernel/lib/page_frame_allocator/: Cargo.toml
kernel/lib/page_frame_allocator/src/: bitmap.rs  lib.rs
kernel/lib/util/: Cargo.toml
kernel/lib/util/src/: lib.rs
kernel/lib/utility/: Cargo.toml
kernel/lib/utility/src/: lib.rs
kernel/linkers/: x64.ld
kernel/src/: bitmap.rs  boot.rs  console.rs  efi_graphics_output.rs  gdt.rs  graphics.rs  idt.rs  lib.rs  log.rs  main.rs  memory.rs  memory_map.rs  memory_paging.rs  page_frame_allocator.rs  psf.rs  temp_graphics.rs  temp_terminal.rs  terminal.rs  virtual_memory.rs
kernel/src/api/: boot.rs  console.rs  mod.rs
kernel/src/api/fonts/: psf.rs
kernel/src/api/memory/: map.rs
kernel/src/arch/x64/: gdt.rs  idt.rs  io_bus.rs  mod.rs
kernel/src/arch/x64/paging/: mod.rs
kernel/src/drivers/: efi_graphics_output.rs  mod.rs  pic.rs
kernel/src/drivers/ps2/: keyboard.rs  mod.rs
kernel/src/mem/: mod.rs
kernel/src/mem/page_frame_alloc/: alloc.rs  bitmap.rs  mod.rs
kernel/src/utility/: data_types.rs
past/kernel/: Cargo.toml  (+3 more)
tools/: build.sh  run.sh
(+39 files in other folders)
