#*/-bootloader/cargo.toml
[package]
name = "taiga-os-bootloader"
version = "0.0.1"
edition = "2021"
authors = ["Ido Messenberg"]

[[bin]]
path = "src/main.rs"
name = "bootx64"
test = false
bench = false

[profile.release]
strip = true

[dependencies]
uefi = { path = "lib/uefi" }
file = { path = "lib/file" }
