[package]
name = "taiga-os-bootloader"
version = "0.1.0"
edition = "2021"
authors = ["Ido Messenberg"]

[[bin]]
path = "src/main.rs"
name = "bootx64"
test = false
bench = false

[lib]
path = "src/lib.rs"
name = "boot"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
uefi = { path = "lib/uefi" }
efi_file_loader = { path = "lib/efi_file_loader" }