[package]
name = "bootloader"
version = "0.0.5"
edition = "2024"

[features]
default = ["uefi_tools", "elf_loader", "psf_loader/loader", "config_parser"]
lib = ["psf_loader"]

[[bin]]
name = "bootx64"
path = "src/main.rs"
test = false
bench = false

[lib]
name = "boot"
path = "src/lib.rs"

[profile.release]
strip="debuginfo"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
uefi = {path = "lib/uefi"}
uefi_tools = {path = "lib/uefi_tools", optional = true}
elf_loader = {path = "lib/elf_loader", features = ["loader"], optional = true}
psf_loader = {path = "lib/psf_loader", optional = true}
config_parser = {path = "lib/config_parser", optional = true}

[lints.clippy]
undocumented_unsafe_blocks = "warn"