[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
authors = ["Ido Messenberg"]

[[bin]]
path = "src/main.rs"
name = "kernelx64"
test = false
bench = false

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
#panic = "unwind"

[dependencies]
util = { path = "lib/util" }
uefi = { path = "../bootloader/lib/uefi"}
psf = { path = "lib/fonts/psf" }
page_frame_allocator = { path = "lib/page_frame_allocator" }
graphics_deriver = { path = "drivers/graphics" }
#efi_file_loader ={ path = "../bootloader/lib/efi_file_loader"}

#taiga-os-bootloader = { path = "../bootloader" }