[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "kernelx64"
test = false
bench = false

[profile.release]
strip = true
#opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"


[dependencies]
bootloader = {path = "../bootloader", features = ["lib"], default-features = false}