[package]
name = "kernel"
version = "0.0.1"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "kernelx64"
test = false
bench = false

[lib]
name = "util"
path = "src/lib.rs"
test = false
bench = false


[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
bootloader = {path = "../bootloader", features = ["lib"], default-features = false}